# Elite

./: .clang-format  .gitignore  .travis.yml  Authors  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py
.travis/: install.sh  run.sh
cmake/: ClangConf.cmake  CombineHeader.cmake  Install.cmake
doc/: CMakeLists.txt  Doxyfile.in  Doxyfile.zh-cn.in  Makefile  index.cn.md  index.po  设计文档.md
doc/misc/: doxygenextra.css  header.html
include/Elite/CodeGen/: CodeGenContext.h  CodeGenFunction.h  ICodeGenContext.h  ICodeGenFunction.h  RedCodeGen.h
include/Elite/LLCG/: llcg.h  llcg_l.h
include/Elite/MetaModel/: FunctionModel.h  MacroModel.h  MapModel.h  MetaModel.h  StructModel.h
include/Elite/Model/: ByteNode.h  CharNode.h  FloatNode.h  IDNode.h  IntNode.h  ModelException.h  Node.h  SeqNode.h  StringNode.h  TypeNode.h  nodes.h
include/Elite/Translater/: Pass.h  PassManager.h
include/Model/: Node.h
runtime/src/: runtime.cpp
src/: main.cpp
src/CodeGen/: CodeGenContext.cpp  CodeGenFunction.cpp  RedCodeGen.cpp
src/LLCG/: llcg.cpp
src/LLCG/LLVMLIB/: llcg_llvm.cpp  llcg_llvm.h  llcg_llvm_l.cpp  llvm_libs.cpp  llvm_type.cpp  llvm_type.h  llvm_value.cpp  llvm_value.h
src/Macro/: Classes.cpp  Functions.cpp  Prescan.cpp
src/MetaModel/: FunctionModel.cpp  MacroModel.cpp  MapModel.cpp  MetaModel.cpp  StructModel.cpp
src/Model/: ByteNode.cpp  CharNode.cpp  FloatNode.cpp  IDNode.cpp  IntNode.cpp  ModelCodeGen.cpp  Node.cpp  StringNode.cpp  TypeNode.cpp
src/Parser/: GrammarParser.cpp  GrammarParser.h  lexer.l  parser.y  scanner.l
src/Translater/: MacroTranslate.cpp  MacroTranslate.h  Pass.cpp  PassManager.cpp  idmap.cpp  idmap.h  idtable.cpp  idtable.h
src/Utils/: StringEscape.cpp  string_formatter.h
test/: CMakeLists.txt  apptest.cpp
